@@ -88,7 +88,7 @@ omx__process_event(struct omx_endpoint * ep, const union omx_evt * evt)
   }
 
   case OMX_EVT_SEND_MEDIUMSQ_FRAG_DONE: {
-    uint16_t sendq_index = evt->send_mediumsq_frag_done.sendq_offset >> OMX_SENDQ_ENTRY_SHIFT;
+    omx_sendq_map_index_t sendq_index = evt->send_mediumsq_frag_done.sendq_offset >> OMX_SENDQ_ENTRY_SHIFT;
     union omx_request * req = omx__endpoint_sendq_map_user(ep, sendq_index);
 
     omx__debug_assert(req);
